--- a/style.css
+++ b/style.css
@@ -11,7 +11,7 @@ body {
     align-items: center;
     height: 100vh;
     height: 100svh;
-    background: linear-gradient(166deg, #EE52FF 0%, #FFEC21 100%);
+    background: linear-gradient(166deg, #e74bf9 0%, #FFEC21 100%);
     font-family: Arial, Helvetica, sans-serif;
     user-select: none;
 }
